--- a/EntityFrameworkCore/src/EntityFrameworkCore/Views/Employees/Index.cshtml
+++ b/EntityFrameworkCore/src/EntityFrameworkCore/Views/Employees/Index.cshtml
@@ -30,6 +30,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.PlaceOfBirth)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Rating)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -53,6 +56,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PlaceOfBirth)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Rating)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
